@@ -5,6 +5,7 @@ Improvements :
 * Added shader support to IECore::CapturingRenderer
 * Added setAttribute()/getAttribute() methods to IECore::Group. The latter traverses the group's parents
 * IECoreGL::Renderer now ignores shader types with a prefix other than gl: (apart from "surface"), rather than complaining about them.
+* IECoreHoudini FnOpHolder and FnProceduralHolder.create() now accept optional parent node and contextArgs parameters. The later should be a kwargs dict from a Houdini UI callback
 
 Bug Fixes :
 
